--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "dev:api": "turbo run dev --filter=api",
+    "build:api": "turbo run build --filter=api",
+    "start:api": "cd apps/api && npm run start"
   },
   "devDependencies": {
     "prettier": "^3.5.3",
